@@ -8,6 +8,7 @@ xx/xx/2011 - MythBox 1.0.2
     - Issue 147 - Changes to the recording schedule do not take effect immediately
     - Issue 149 - Help text on Settings screen gets truncated based on the translation
     - Added support for ScheduleType.NOT_RECORDING
+    - TVRage grabber more resilient to incomplete season and episode information
     
 1/13/2011 - MythBox 1.0.1
 -----------------------------
